# CTL

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  hypergraph.hpp  main.cpp
include/ctl/: cxptr.hpp  hypergraph.hpp
include/ctl/internal/: identity.hpp  utility.hpp
include/physica/: hyperedge.h  hypergraph.h  identifiable_base.h  pattern_match.h  rule.h  uuid.h  wolfram_physics.h
include/physica/wolfram_physics/: common_utility.h  hyperedge.h  node.h  rule.h
src/: CMakeLists.txt  hyperedge.cpp  hypergraph.cpp  identifiable_base.cpp  node.cpp  pattern_match.cpp  rule.cpp  uuid.cpp
src/wolfram_physics/: hyperedge.cpp  hypergraph.cpp  identifiable_base.cpp  node.cpp  pattern_match.cpp  rule.cpp  uuid.cpp
test/: CMakeLists.txt  test_hypergraph.cpp  test_rule.cpp
